<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="8dp"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/orderHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >
            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                app:layout_constraintTop_toTopOf="@+id/orderTitle"
                app:layout_constraintBottom_toBottomOf="@+id/orderTitle"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/ic_shop"
                android:src="@drawable/ic_baselineshopping_bag_24"
                android:contentDescription="@string/shopping_icon" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/orderTitle"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ic_shop">


                <TextView
                    android:id="@+id/tvBelanja"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/belanja"
                    android:textColor="@color/black_head"
                    android:textSize="10sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/orderDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_02_juni_2023"
                    android:textColor="@color/black_light"
                    android:textSize="7sp"
                    app:layout_constraintTop_toBottomOf="@+id/tvBelanja"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textStyle="bold" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/orderStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_status"
                android:textColor="@color/main_green"
                android:textSize="8sp"
                app:layout_constraintTop_toTopOf="@id/orderTitle"
                app:layout_constraintBottom_toBottomOf="@id/orderTitle"
                app:layout_constraintEnd_toEndOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/headerOrderDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_light"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/orderHeader" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/productLayout"
            android:layout_width="match_parent"
            android:layout_marginVertical="5dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/headerOrderDivider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/productImage"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:scaleType="centerCrop"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/tvProductName"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/productImage"
                android:text="@string/product_name"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="10sp"
                android:textColor="@color/black_head"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvQuantity"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/productImage"
                android:text="@string/product_name"
                app:layout_constraintTop_toBottomOf="@+id/tvProductName"
                android:textSize="7sp"
                android:textColor="@color/black_head" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tvOtherProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/bottomOrderDivider"
            app:layout_constraintTop_toBottomOf="@id/productLayout"
            android:text="+1 produk lainnya"
            android:layout_marginTop="5dp"
            android:textSize="6sp"
            android:textColor="@color/black_head"
            app:layout_constraintStart_toStartOf="parent" />


        <View
            android:id="@+id/bottomOrderDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_light"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/tvOtherProduct" />
        <TextView
            android:id="@+id/tvTotalBelanja"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/bottomOrderDivider"
            android:text="@string/total_belanja_20000"
            android:textStyle="bold"
            android:textColor="@color/black_light"
            android:layout_marginTop="5dp"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>





</androidx.cardview.widget.CardView>